Commit from TeleportHQ

--- a/src/app/components/side-nav-sub-button/side-nav-sub-button.component.html
+++ b/src/app/components/side-nav-sub-button/side-nav-sub-button.component.html
@@ -1,5 +1,5 @@
 <div class="side-nav-sub-button-container">
-  <button type="button" class="side-nav-sub-button-button button">
+  <button type="button" class="side-nav-sub-button-button button nav-btn">
     {{ button }}
   </button>
 </div>
