--- a/src/app/components/side-nav-bar-links/side-nav-bar-links.component.html
+++ b/src/app/components/side-nav-bar-links/side-nav-bar-links.component.html
@@ -3,7 +3,7 @@
     <div class="side-nav-bar-links-container2">
       <a
         routerLink="/dashboard"
-        class="side-nav-bar-links-navlink button selected-nav-btn"
+        class="side-nav-bar-links-navlink button selected-nav-btn nav-btn-border"
       >
         {{ button }}
       </a>
