--- a/src/styles.css
+++ b/src/styles.css
@@ -82,11 +82,16 @@
   transform: translateX(0%) !important;
 }
 .selected-nav-btn {
+  color: var(--dl-color-gray-white);
   background-color: var(--dl-color-secondary-2);
 }
 .nav-btn {
   color: var(--dl-color-primary-1);
-  background-color: none;
+}
+.nav-btn-border {
+  border-color: var(--dl-color-secondary-2);
+  border-width: 2px;
+  border-radius: 8px;
 }
 .TitlesofPages {
   font-size: 30px;
