--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@
   display: flex !important;
   transform: translateX(0%) !important;
 }
-.selected-nav-btn {
+.selected-nav {
   color: var(--dl-color-gray-white);
   background-color: var(--dl-color-secondary-2);
 }
