Commit from TeleportHQ

--- a/src/app/components/side-nav-sub-button/side-nav-sub-button.component.html
+++ b/src/app/components/side-nav-sub-button/side-nav-sub-button.component.html
@@ -1,4 +1,4 @@
-<div class="side-nav-sub-button-container">
+<div class="side-nav-sub-button-container nav-link">
   <button
     type="button"
     class="side-nav-sub-button-button button nav-btn nav-btn-border"
