Commit from TeleportHQ

--- a/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
+++ b/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
@@ -25,7 +25,7 @@
                   </option>
                   <option value="Orthopedic Ward ">
                     Orthopedic Ward
-                    <span [innerHTML]="raws1p9"></span>
+                    <span [innerHTML]="rawblu7"></span>
                   </option>
                   <option value="Cardiology Ward">Cardiology Ward</option>
                   <option value="Maternity Ward﻿">Maternity Ward﻿</option>
