nav button style change with current route url

--- a/src/app/components/side-nav-sub-button/side-nav-sub-button.component.html
+++ b/src/app/components/side-nav-sub-button/side-nav-sub-button.component.html
@@ -2,6 +2,7 @@
   <button
     type="button"
     class="side-nav-sub-button-button button nav-btn nav-btn-border"
+    [ngClass]="{ selectedNav: isSelected == true }"
   >
     {{ button }}
   </button>
