--- a/src/app/components/side-nav-bar-links/side-nav-bar-links.component.css
+++ b/src/app/components/side-nav-bar-links/side-nav-bar-links.component.css
@@ -137,6 +137,11 @@
   text-decoration: none;
 }
 
+.nav-link.selectedNav {
+  color: var(--dl-color-gray-white);
+  background-color: var(--dl-color-secondary-2);
+}
+
 
 
 
