--- a/src/app/components/side-nav-bar-links/side-nav-bar-links.component.html
+++ b/src/app/components/side-nav-bar-links/side-nav-bar-links.component.html
@@ -1,9 +1,10 @@
 <div class="side-nav-bar-links-container" [ngClass]="rootClassName">
   <div class="side-nav-bar-links-container01">
-    <div class="side-nav-bar-links-container02 nav-link">
+    <div class="side-nav-bar-links-container02 ">
       <a
         routerLink="/dashboard"
-        class="side-nav-bar-links-navlink button selected-nav nav-btn-border"
+        class="side-nav-bar-links-navlink button  nav-btn-border nav-link"
+        [ngClass]="{ selectedNav: this.hasRoute('dashboard') }"
       >
         {{ button }}
       </a>
@@ -12,27 +13,31 @@
       <side-nav-sub-section-title
         button="Patients"
       ></side-nav-sub-section-title>
-      <div class="side-nav-bar-links-container04 nav-link">
-        <a routerLink="/admission" class="side-nav-bar-links-navlink01">
+      <div class="side-nav-bar-links-container04 ">
+        <a routerLink="/admission" class="side-nav-bar-links-navlink01  nav-link"
+        >
           <side-nav-sub-button
             button="Admission/Discharge"
             class="side-nav-bar-links-component01"
+            [isSelected]="hasRoute('admission')"
           ></side-nav-sub-button>
         </a>
       </div>
-      <div class="side-nav-bar-links-container05 nav-link">
-        <a routerLink="/admit-or-transfer" class="side-nav-bar-links-navlink02">
+      <div class="side-nav-bar-links-container05 ">
+        <a routerLink="/admit-or-transfer" class="side-nav-bar-links-navlink02  nav-link">
           <side-nav-sub-button
             button="Admit/Transfer"
             class="side-nav-bar-links-component02"
+            [isSelected]="hasRoute('admit-or-transfer')"
           ></side-nav-sub-button>
         </a>
       </div>
-      <div class="side-nav-bar-links-container06 nav-link">
-        <a routerLink="/treatment-records" class="side-nav-bar-links-navlink03">
+      <div class="side-nav-bar-links-container06 ">
+        <a routerLink="/treatment-records" class="side-nav-bar-links-navlink03 nav-link">
           <side-nav-sub-button
             button="Treatment Records"
             class="side-nav-bar-links-component03"
+            [isSelected]="hasRoute('treatment-records')"
           ></side-nav-sub-button>
         </a>
       </div>
@@ -42,46 +47,52 @@
         button="Doctors"
         rootClassName="side-nav-sub-section-title-root-class-name1"
       ></side-nav-sub-section-title>
-      <a routerLink="/register-doctor" class="side-nav-bar-links-navlink04">
+      <a routerLink="/register-doctor" class="side-nav-bar-links-navlink04 nav-link">
         <side-nav-sub-button
           button="Register"
           class="side-nav-bar-links-component05"
+          [isSelected]="hasRoute('register-doctor')"
         ></side-nav-sub-button>
       </a>
-      <a routerLink="/teams" class="side-nav-bar-links-navlink05">
+      <a routerLink="/teams" class="side-nav-bar-links-navlink05  nav-link">
         <side-nav-sub-button
           button="Teams"
           class="side-nav-bar-links-component06"
+          [isSelected]="hasRoute('teams')"
         ></side-nav-sub-button>
       </a>
     </div>
     <div class="side-nav-bar-links-container08">
       <side-nav-sub-section-title button="Wards"></side-nav-sub-section-title>
-      <a routerLink="/ward-types" class="side-nav-bar-links-navlink06">
+      <a routerLink="/ward-types" class="side-nav-bar-links-navlink06  nav-link">
         <side-nav-sub-button
           button="Ward Types"
           class="side-nav-bar-links-component08"
+          [isSelected]="hasRoute('ward-types')"
         ></side-nav-sub-button>
       </a>
-      <a routerLink="/ward-availability" class="side-nav-bar-links-navlink07">
+      <a routerLink="/ward-availability" class="side-nav-bar-links-navlink07  nav-link">
         <side-nav-sub-button
           button="Ward Availability"
           class="side-nav-bar-links-component09"
+          [isSelected]="hasRoute('ward-availability')"
         ></side-nav-sub-button>
       </a>
     </div>
     <div class="side-nav-bar-links-container09">
       <side-nav-sub-section-title button="Admin"></side-nav-sub-section-title>
-      <a routerLink="/activity-log" class="side-nav-bar-links-navlink08">
+      <a routerLink="/activity-log" class="side-nav-bar-links-navlink08  nav-link">
         <side-nav-sub-button
           button="Activity Log"
           class="side-nav-bar-links-component11"
+          [isSelected]="hasRoute('activity-log')"
         ></side-nav-sub-button>
       </a>
-      <a routerLink="/settings" class="side-nav-bar-links-navlink09">
+      <a routerLink="/settings" class="side-nav-bar-links-navlink09  nav-link">
         <side-nav-sub-button
           button="Settings"
           class="side-nav-bar-links-component12"
+          [isSelected]="hasRoute('settings')"
         ></side-nav-sub-button>
       </a>
     </div>
