--- a/src/app/components/side-nav-sub-button/side-nav-sub-button.component.css
+++ b/src/app/components/side-nav-sub-button/side-nav-sub-button.component.css
@@ -11,3 +11,9 @@
   font-size: 16px;
   text-align: left;
 }
+
+.side-nav-sub-button-button.selectedNav {
+  color: var(--dl-color-gray-white);
+  background-color: var(--dl-color-secondary-2);
+}
+
