fixed table issues

--- a/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
+++ b/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
@@ -48,49 +48,7 @@
             <div class="admit-or-transfer-container12">
               <div class="admit-or-transfer-container13">
                 <div class="admit-or-transfer-code-embed">
-                  <dangerous-html
-                    html="
-<div class='hms-table-container'>
-  <table>
-<tbody>
-<tr>
-  <th>Ward No</th>
-  <th>Ward Capacity</th>
-  <th>Available Beds</th>
-</tr>
-<tr>
-  <td>F-05</td>
-  <td>30</td>
-  <td>0</td>
-</tr>
-<tr>
-  <td>F-08</td>
-  <td>30</td>
-  <td>1</td>
-</tr>
-<tr>
-  <td>F-12</td>
-  <td>30</td>
-  <td>3</td>
-</tr>
-
-</tbody>
-</table>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-"
-                  ></dangerous-html>
+                  <app-admit-or-transfer-main-table></app-admit-or-transfer-main-table>
                 </div>
               </div>
             </div>
