--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -31,99 +31,7 @@
             <div class="patients-container09">
               <div class="patients-container10">
                 <div class="patients-code-embed">
-                  <dangerous-html
-                    html="
-<div class='hms-table-container'>
-  <table>
-<tbody>
-<tr>
-<th>Patient Name</th>
-<th>Registration No</th>
-<th>Ward No</th>
-<th>Admitted Date</th>
-<th>Assigned Team</th>
-</tr>
-
-<tr>
-<td>Smith Anderson</td>
-<td>2208940</td>
-<td>M - 03</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>James Andrew Robert</td>
-<td>2208946</td>
-<td>M - 03</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>Michaela Susan Johnson</td>
-<td>2208940</td>
-<td>F - 04</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>Smith Anderson</td>
-<td>2208960</td>
-<td>M - 09</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>James Andrew Robert</td>
-<td>2208705</td>
-<td>M - 05</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>Michaela Susan Johnson</td>
-<td>2208940</td>
-<td>F - 08</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>Smith Anderson</td>
-<td>2208550</td>
-<td>M - 04</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>James Andrew Robert</td>
-<td>2208923</td>
-<td>M - 07</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-<tr>
-<td>Michaela Susan Johnson</td>
-<td>2208940</td>
-<td>F - 02</td>
-<td>02.05.2023</td>
-<td>Team Code xx</td>
-</tr>
-</tbody>
-</table>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-"
-                  ></dangerous-html>
+                  <app-patients-main-table></app-patients-main-table>
                 </div>
               </div>
             </div>
