--- a/src/app/pages/ward-availability/ward-availability.component.html
+++ b/src/app/pages/ward-availability/ward-availability.component.html
@@ -17,83 +17,80 @@
             <div class="ward-availability-container08">
               <div class="ward-availability-container09">
                 <div class="ward-availability-code-embed">
-                  <dangerous-html
-                    html="<div class='hms-table-container'>
-  <table>
-    <tbody>
-      <tr>
-        <th>Ward No</th>
-        <th>Ward Type</th>
-        <th>Ward Capacity</th>
-        <th>Ward Availability</th>
-      </tr>
-      <tr>
-        <td>F 01</td>
-        <td>Accident and Emergency Ward</td>
-        <td>50</td>
-        <td>5</td>
-      </tr>
+                  <div class='hms-table-container'>
+                    <table>
+                      <tbody>
+                        <tr>
+                          <th>Ward No</th>
+                          <th>Ward Type</th>
+                          <th>Ward Capacity</th>
+                          <th>Ward Availability</th>
+                        </tr>
+                        <tr>
+                          <td>F 01</td>
+                          <td>Accident and Emergency Ward</td>
+                          <td>50</td>
+                          <td>5</td>
+                        </tr>
 
-      <tr>
-        <td>F02</td>
-        <td>Orthopedic Ward</td>
-        <td>50</td>
-        <td>4</td>
-      </tr>
+                        <tr>
+                          <td>F02</td>
+                          <td>Orthopedic Ward</td>
+                          <td>50</td>
+                          <td>4</td>
+                        </tr>
 
-      <tr>
-        <td>F 03</td>
-        <td>Cardiology Ward</td>
-        <td>50</td>
-        <td>4</td>
-      </tr>
+                        <tr>
+                          <td>F 03</td>
+                          <td>Cardiology Ward</td>
+                          <td>50</td>
+                          <td>4</td>
+                        </tr>
 
-      <tr>
-        <td>F 04</td>
-        <td>Maternity Ward</td>
-        <td>50</td>
-        <td>4</td>
-      </tr>
+                        <tr>
+                          <td>F 04</td>
+                          <td>Maternity Ward</td>
+                          <td>50</td>
+                          <td>4</td>
+                        </tr>
 
-      <tr>
-        <td>F 05</td>
-        <td>Avening Ward</td>
-        <td>50</td>
-        <td>3</td>
-      </tr>
+                        <tr>
+                          <td>F 05</td>
+                          <td>Avening Ward</td>
+                          <td>50</td>
+                          <td>3</td>
+                        </tr>
 
-      <tr>
-        <td>M 01</td>
-        <td>Accident and Emergency Ward</td>
-        <td>50</td>
-        <td>3</td>
-      </tr>
+                        <tr>
+                          <td>M 01</td>
+                          <td>Accident and Emergency Ward</td>
+                          <td>50</td>
+                          <td>3</td>
+                        </tr>
 
-      <tr>
-        <td>M 02</td>
-        <td>Orthopedic Ward</td>
-        <td>60</td>
-        <td>2</td>
-      </tr>
+                        <tr>
+                          <td>M 02</td>
+                          <td>Orthopedic Ward</td>
+                          <td>60</td>
+                          <td>2</td>
+                        </tr>
 
-      <tr>
-        <td>M 03</td>
-        <td>Cardiology Ward</td>
-        <td>50</td>
-        <td>1</td>
-      </tr>
+                        <tr>
+                          <td>M 03</td>
+                          <td>Cardiology Ward</td>
+                          <td>50</td>
+                          <td>1</td>
+                        </tr>
 
-      <tr>
-        <td>M 04</td>
-        <td>Avening Ward</td>
-        <td>50</td>
-        <td>0</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-"
-                  ></dangerous-html>
+                        <tr>
+                          <td>M 04</td>
+                          <td>Avening Ward</td>
+                          <td>50</td>
+                          <td>0</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
