--- a/src/app/pages/treatment-records/treatment-records.component.html
+++ b/src/app/pages/treatment-records/treatment-records.component.html
@@ -43,64 +43,62 @@
             <div class="treatment-records-container10">
               <div class="treatment-records-container11">
                 <div class="treatment-records-code-embed">
-                  <dangerous-html
-                    html="<div class='hms-table-container'>
-  <table>
-    <tbody>
-      <tr>
-        <th>Doctor Name</th>
-        <th>Designation</th>
-        <th>Treated Date</th>
-        <th>Treated Time</th>
-      </tr>
+                  <div class='hms-table-container'>
+                    <table>
+                      <tbody>
+                        <tr>
+                          <th>Doctor Name</th>
+                          <th>Designation</th>
+                          <th>Treated Date</th>
+                          <th>Treated Time</th>
+                        </tr>
 
-      <tr>
-        <td>Dr. Robert Pattinson</td>
-        <td>Doctor</td>
-        <td>2029-07-10</td>
-        <td>22:00</td>
-      </tr>
-      <tr>
-        <td>Dr. Tom Holland﻿</td>
-        <td>Doctor</td>
-        <td>2029-07-11</td>
-        <td>08:00</td>
-      </tr>
-      <tr>
-        <td>Dr. Adison Taylor</td>
-        <td>Doctor</td>
-        <td>2029-07-11</td>
-        <td>13:00</td>
-      </tr>
-      <tr>
-        <td>Dr. Laurel Barry</td>
-        <td>Doctor</td>
-        <td>2029-07-12</td>
-        <td>09:00</td>
-      </tr>
-      <tr>
-        <td>Dr. Arianna Hunt	</td>
-        <td>Doctor</td>
-        <td>2029-07-13</td>
-        <td>14:00</td>
-      </tr>
-      <tr>
-        <td>Dr. Josie Wilkins</td>
-        <td>Grade 01 Junior Doctor</td>
-        <td>2029-07-14</td>
-        <td>08:00</td>
-      </tr>
-      <tr>
-        <td>Dr. Dillon Barnes	</td>
-        <td>Doctor</td>
-        <td>2029-07-15</td>
-        <td>16:00</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-"
-                  ></dangerous-html>
+                        <tr>
+                          <td>Dr. Robert Pattinson</td>
+                          <td>Doctor</td>
+                          <td>2029-07-10</td>
+                          <td>22:00</td>
+                        </tr>
+                        <tr>
+                          <td>Dr. Tom Holland﻿</td>
+                          <td>Doctor</td>
+                          <td>2029-07-11</td>
+                          <td>08:00</td>
+                        </tr>
+                        <tr>
+                          <td>Dr. Adison Taylor</td>
+                          <td>Doctor</td>
+                          <td>2029-07-11</td>
+                          <td>13:00</td>
+                        </tr>
+                        <tr>
+                          <td>Dr. Laurel Barry</td>
+                          <td>Doctor</td>
+                          <td>2029-07-12</td>
+                          <td>09:00</td>
+                        </tr>
+                        <tr>
+                          <td>Dr. Arianna Hunt	</td>
+                          <td>Doctor</td>
+                          <td>2029-07-13</td>
+                          <td>14:00</td>
+                        </tr>
+                        <tr>
+                          <td>Dr. Josie Wilkins</td>
+                          <td>Grade 01 Junior Doctor</td>
+                          <td>2029-07-14</td>
+                          <td>08:00</td>
+                        </tr>
+                        <tr>
+                          <td>Dr. Dillon Barnes	</td>
+                          <td>Doctor</td>
+                          <td>2029-07-15</td>
+                          <td>16:00</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+
                 </div>
               </div>
             </div>
