input elemts: placeholders updated

--- a/src/app/pages/admission/admission.component.html
+++ b/src/app/pages/admission/admission.component.html
@@ -26,12 +26,14 @@
                   <span class="admission-text">Title</span>
                   <text-input
                     rootClassName="text-input-root-class-name6"
+                    textinput_placeholder1="Mr, Mr, Ms, ..."
                   ></text-input>
                 </div>
                 <div class="admission-container11">
                   <span class="admission-text01">Full Name</span>
                   <text-input
                     rootClassName="text-input-root-class-name8"
+                    textinput_placeholder1="Enter your full name"
                   ></text-input>
                 </div>
                 <div class="admission-container12">
@@ -52,8 +54,8 @@
                       <input
                         type="date"
                         required
-                        placeholder
                         class="admission-textinput input"
+                        placeholder="E.g: 1990-08-22"
                       />
                     </div>
                   </div>
@@ -77,6 +79,7 @@
                       maxlength="15"
                       placeholder
                       class="admission-textinput1 input"
+                      placeholder="Enter contact number"
                     />
                   </div>
                 </div>
@@ -84,12 +87,14 @@
                   <span class="admission-text06">Address</span>
                   <text-input
                     rootClassName="text-input-root-class-name14"
+                    textinput_placeholder1="Enter address"
                   ></text-input>
                 </div>
                 <div class="admission-container20">
                   <span class="admission-text07">Identity Number</span>
                   <text-input
                     rootClassName="text-input-root-class-name15"
+                    textinput_placeholder1="Enter Identity Number"
                   ></text-input>
                 </div>
               </div>
@@ -98,6 +103,7 @@
                   <span class="admission-text08">Guardian Name</span>
                   <text-input
                     rootClassName="text-input-root-class-name7"
+                    textinput_placeholder1="Enter Guardian's name"
                   ></text-input>
                 </div>
                 <div class="admission-container23">
@@ -108,6 +114,7 @@
                       required
                       placeholder
                       class="admission-textinput2 input"
+                      placeholder="Enter Guardian's Contact Number"
                     />
                   </div>
                 </div>
@@ -115,6 +122,7 @@
                   <span class="admission-text10">Guardian Address</span>
                   <text-input
                     rootClassName="text-input-root-class-name16"
+                    textinput_placeholder1="Enter Guardian's Address"
                   ></text-input>
                 </div>
                 <div class="admission-container26">
@@ -123,6 +131,7 @@
                   </span>
                   <text-input
                     rootClassName="text-input-root-class-name17"
+                    textinput_placeholder1="E.g: Father, Uncle, Wife, ..."
                   ></text-input>
                 </div>
                 <div class="admission-container27">
@@ -134,7 +143,7 @@
                       <input
                         type="datetime-local"
                         required
-                        placeholder
+                        placeholder="E.g: 2023-07-20"
                         class="admission-textinput3 input"
                       />
                     </div>
@@ -144,6 +153,7 @@
                   <span class="admission-text13">Condition</span>
                   <text-input
                     rootClassName="text-input-root-class-name18"
+                    textinput_placeholder1="Enter the patient's condition"
                   ></text-input>
                 </div>
                 <div class="admission-container31">
