--- a/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
+++ b/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
@@ -62,6 +62,7 @@
                       </span>
                       <text-input
                         rootClassName="text-input-root-class-name39"
+                        textinput_placeholder1="E.g: 2208946"
                       ></text-input>
                     </div>
                     <div class="admit-or-transfer-container18">
@@ -76,6 +77,7 @@
                       <span class="admit-or-transfer-text5">Current Ward</span>
                       <text-input
                         rootClassName="text-input-root-class-name46"
+                        textinput_placeholder1="Enter current Ward number"
                       ></text-input>
                     </div>
                     <div class="admit-or-transfer-container21">
@@ -85,7 +87,6 @@
                           <input
                             type="date"
                             required
-                            placeholder
                             class="admit-or-transfer-textinput input"
                           />
                         </div>
