--- a/src/app/pages/doctors/doctors.component.html
+++ b/src/app/pages/doctors/doctors.component.html
@@ -22,7 +22,7 @@
               </select>
               <text-input
                 rootClassName="text-input-root-class-name2"
-                textinput_placeholder1="Enter text"
+                textinput_placeholder1="Enter Doctor's Id"
               ></text-input>
               <primary-button
                 button="Search"
