--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -22,6 +22,7 @@
               </select>
               <text-input
                 rootClassName="text-input-root-class-name1"
+                textinput_placeholder1="Enter Ward Number"
               ></text-input>
               <primary-button
                 button="Search"
