--- a/src/app/pages/teams/teams.component.html
+++ b/src/app/pages/teams/teams.component.html
@@ -37,13 +37,13 @@
                 </div>
                 <div class="teams-container11">
                   <span class="teams-text1">Doctor&apos;s ID</span>
-                  <div class="teams-container12">
-                    <input
-                      type="number"
-                      required
-                      placeholder
-                      class="teams-textinput input"
-                    />
+                  <div class="teams-container11">
+                    <span class="teams-text1">Doctor&apos;s ID</span>
+                    <select required class="register-doctor-select">
+                      <option value="639724" selected>639724</option>
+                      <option value="833866">833866</option>
+                      <option value="668526">668526</option>
+                    </select>
                   </div>
                 </div>
                 <div class="teams-container13">
@@ -53,7 +53,7 @@
                       type="text"
                       disabled
                       required
-                      placeholder
+                      value="Annabel Park"
                       class="teams-textinput1 input"
                     />
                   </div>
