--- a/src/app/pages/treatment-records/treatment-records.component.html
+++ b/src/app/pages/treatment-records/treatment-records.component.html
@@ -20,7 +20,7 @@
               </span>
               <text-input
                 rootClassName="text-input-root-class-name54"
-                textinput_placeholder1="2208946"
+                textinput_placeholder1="E.g: 2208946"
               ></text-input>
               <primary-button
                 button="Search"
