--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -26,7 +26,7 @@
                         <input
                           type="text"
                           required
-                          placeholder
+                          value="Ryan Willison"
                           class="settings-textinput input"
                         />
                       </div>
@@ -45,7 +45,7 @@
                         <input
                           type="date"
                           required
-                          placeholder="Date of birth"
+                          value="1985-02-22"
                           class="settings-textinput1 input"
                         />
                       </div>
