--- a/src/app/pages/wards/wards.component.html
+++ b/src/app/pages/wards/wards.component.html
@@ -27,7 +27,7 @@
               </select>
               <text-input
                 rootClassName="text-input-root-class-name3"
-                textinput_placeholder1="Enter text"
+                textinput_placeholder1="Enter name or ID of a patient"
               ></text-input>
               <primary-button
                 button="Search"
