--- a/src/app/components/hms-modal/hms-modal.component.html
+++ b/src/app/components/hms-modal/hms-modal.component.html
@@ -1,5 +1,7 @@
 <dialog #dialog>
+    <h2>{{dialogTitle}}</h2>
+    <br/>
     <ng-content></ng-content>
     <button (click)="closeDialog()">{{closeDialogBtnName}}</button>
-  </dialog>
-  <button (click)="openDialog()">{{openDialogBtnName}}</button>
+</dialog>
+<primary-button (click)="openDialog()" button="{{openDialogBtnName}}"></primary-button>
