--- a/src/app/pages/discharge/discharge.component.html
+++ b/src/app/pages/discharge/discharge.component.html
@@ -69,11 +69,12 @@
               id="patient-delete-permission-modal"
               openDialogBtnName="Discharge"
               closeDialogBtnName="Cancel"
+              dialogTitle="Authorization required"
             >
-                This action will delete all the records of the selected patients from the system. Enter your password to continue this action.
+                This action will delete all the records of the selected patient from the system.<br/> Enter your password to continue this action.
                 <text-input textinput_placeholder1="Password"></text-input>
                 <primary-button
-                button="Discharge"
+                button="Continue"
                 rootClassName="primary-button-root-class-name10"
               ></primary-button>
             </app-hms-modal>
