remaining changes for prototype v2

--- a/src/app/pages/patients-cared-by-a-team/patients-cared-by-a-team.component.html
+++ b/src/app/pages/patients-cared-by-a-team/patients-cared-by-a-team.component.html
@@ -122,6 +122,7 @@
                 </div>
               </div>
             </div>
+            <primary-button style="display: block;" button="Generate List" ></primary-button>
           </div>
         </div>
       </div>
