--- a/src/app/pages/wards/wards.component.html
+++ b/src/app/pages/wards/wards.component.html
@@ -25,10 +25,6 @@
                 <option value="M-02">M-02</option>
                 <option value="M-03">M-03</option>
               </select>
-              <text-input
-                rootClassName="text-input-root-class-name3"
-                textinput_placeholder1="Enter name or ID of a patient"
-              ></text-input>
               <primary-button
                 button="Search"
                 rootClassName="primary-button-root-class-name6"
@@ -95,6 +91,13 @@
                   </div>
                 </div>
               </div>
+              <br/>
+              <br/>
+              <primary-button
+                button="Generate List"
+                style="display:block"
+              >
+              </primary-button>
             </div>
           </div>
         </div>
