--- a/src/app/pages/wards/wards.component.css
+++ b/src/app/pages/wards/wards.component.css
@@ -105,7 +105,7 @@
   display: flex;
   align-self: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
 }
 .wards-container10 {
