changes for prototype v2

--- a/src/app/pages/register-doctor/register-doctor.component.html
+++ b/src/app/pages/register-doctor/register-doctor.component.html
@@ -108,14 +108,16 @@
                   </div>
                 </div>
               </div>
+              <br/>
+              <br/>
               <div class="register-doctor-container26">
                 <abstract-button
                   button="Clear Form"
-                  rootClassName="abstract-button-root-class-name2"
+                  style="display: block;"
                 ></abstract-button>
                 <primary-button
                   button="Submit"
-                  rootClassName="primary-button-root-class-name16"
+                  style="display: block;"
                 ></primary-button>
               </div>
             </form>
