--- a/src/app/pages/register-doctor/register-doctor.component.css
+++ b/src/app/pages/register-doctor/register-doctor.component.css
@@ -327,7 +327,7 @@
   align-self: flex-end;
   align-items: center;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 @media(max-width: 991px) {
   .register-doctor-container05 {
