--- a/src/app/components/side-nav-sub-button/side-nav-sub-button.component.css
+++ b/src/app/components/side-nav-sub-button/side-nav-sub-button.component.css
@@ -12,7 +12,7 @@
   text-align: left;
 }
 
-.side-nav-sub-button-button.selectedNav {
+.side-nav-sub-button-button.selectedNav, .side-nav-sub-button-button:hover {
   color: var(--dl-color-gray-white);
   background-color: var(--dl-color-secondary-2);
 }
