disabled current ward number

--- a/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
+++ b/src/app/pages/admit-or-transfer/admit-or-transfer.component.html
@@ -75,10 +75,12 @@
                   <div class="admit-or-transfer-container19">
                     <div class="admit-or-transfer-container20">
                       <span class="admit-or-transfer-text5">Current Ward</span>
-                      <text-input
-                        rootClassName="text-input-root-class-name46"
-                        textinput_placeholder1="Enter current Ward number"
-                      ></text-input>
+                      <input
+                        style="text-align: right;"
+                        disabled
+                        value="F-05"
+                        class="admit-or-transfer-textinput input"
+                      />
                     </div>
                     <div class="admit-or-transfer-container21">
                       <span class="admit-or-transfer-text6">Transfer Date</span>
