text input to password type in discharge dialog

--- a/src/app/components/text-input/text-input.component.html
+++ b/src/app/components/text-input/text-input.component.html
@@ -1,6 +1,6 @@
 <div class="text-input-container" [ngClass]="rootClassName">
   <input
-    type="text"
+    [type]="type"
     required
     [attr.placeholder]="textinput_placeholder1"
     class="text-input-textinput input"
