--- a/src/app/pages/discharge/discharge.component.html
+++ b/src/app/pages/discharge/discharge.component.html
@@ -72,7 +72,7 @@
               dialogTitle="Authorization required"
             >
                 This action will delete all the records of the selected patient from the system.<br/> Enter your password to continue this action.
-                <text-input textinput_placeholder1="Password"></text-input>
+                <text-input textinput_placeholder1="Password" type="password"></text-input>
                 <primary-button
                 button="Continue"
                 rootClassName="primary-button-root-class-name10"
