change gender and marital status options

--- a/src/app/pages/admission/admission.component.html
+++ b/src/app/pages/admission/admission.component.html
@@ -41,10 +41,7 @@
                   <select required class="admission-select">
                     <option value="Male" selected>Male</option>
                     <option value="Female">Female</option>
-                    <option value="Option 1">Option 1</option>
                     <option value="Other">Other</option>
-                    <option value="Option 2">Option 2</option>
-                    <option value="Option 3">Option 3</option>
                   </select>
                 </div>
                 <div class="admission-container13">
@@ -65,9 +62,8 @@
                   <select required class="admission-select1">
                     <option value="MARRIED" selected>Married</option>
                     <option value="NOT_MARRIED">Not married</option>
-                    <option value="Option 1">Option 1</option>
-                    <option value="Option 2">Option 2</option>
-                    <option value="Option 3">Option 3</option>
+                    <option value="WIDOWED">Widowed</option>
+                    <option value="SEPERATED_OR_DIVORCED">Seperated or Divorced</option>
                   </select>
                 </div>
                 <div class="admission-container17">
